[package]
name = "hello-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda-runtime = { path = "../lambda-runtime" }
lambda-models = { path = "../lambda-models" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
http = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
lazy_static = "1.5.0"