[package]
name = "lambda-models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1.0"
url = "2.5"
http-serde = "2.0"
chrono = { version = "0.4", features = ["serde"] }