[package]
name = "lambda-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda-models = { path = "../lambda-models" }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
url = "2.5"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio-test = "0.4"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
serial_test = "3.0"